<?xml version="1.0"?>
<package format="2">
  <name>gazebo_vsm</name>
  <version>0.0.1</version>
  <description>The gazebo_vsm package</description>

  <maintainer email="wzli@rapyuta-robotics.org">WenZheng Li</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>gazebo</depend>
  <depend>pugixml-dev</depend>
  <depend>yaml-cpp</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
