<?xml version="1.0"?>
<package format="2">
  <name>gazebo_vsm_demo</name>
  <version>0.0.1</version>
  <description>The gazebo_vsm_demo package</description>

  <maintainer email="wzli@rapyuta-robotics.org">WenZheng Li</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>std_srvs</depend>
  <depend>move_base_msgs</depend>

  <exec_depend>gazebo_vsm</exec_depend>
  <exec_depend>husky_gazebo</exec_depend>
  <exec_depend>husky_navigation</exec_depend>
</package>
